--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,7 @@ h3{
     color: $textColor;
     text-decoration: none;
     margin-right: 20px;
+    font-size: 14px;
 }
 
 .headerLinks a:hover{
@@ -65,6 +66,8 @@ h3{
 .submitBtn{
     padding: 5px;
     margin-top: 30px;
+    margin-right: 5px;
+    margin-left: 5px;
     font-size: 16px;
     border-radius: 5px;
     border-width: 0;
